[project]
name = "agentic-honeypot-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "langchain-core==0.3.29",
    "langgraph==0.2.33",
    "pydantic==2.8.2",
    "uvicorn[standard]==0.30.6",
]
